# win11-benchmark

./: CMakeLists.txt  outline.txt
include/: benchmark_check.h  benchmark_engine.h  benchmark_section.h  benchmark_types.h  command_parser.h
include/sections/section1/: account_policies.h
include/sections/section17/: advanced_audit_policy_section.h
include/sections/section2/: security_options.h
include/sections/section4/: restricted_groups.h
include/sections/section5/: system_services.h
include/sections/section9/: windows_firewall_section.h
src/: benchmark_engine.cpp  command_parser.cpp  main.cpp
src/sections/section1/: account_policies.cpp
src/sections/section17/: advanced_audit_policy_section.cpp
src/sections/section2/: security_options.cpp
src/sections/section4/: restricted_groups.cpp
src/sections/section5/: system_services.cpp
src/sections/section9/: windows_firewall_section.cpp
